@@ -42,6 +42,8 @@ import java.util.GregorianCalendar;
 import java.util.HashMap;
 import java.util.Hashtable;
 import java.util.Iterator;
+import java.util.LinkedHashMap;
+import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
@@ -53,7 +55,6 @@ import java.util.concurrent.TimeUnit;
 
 import javax.swing.JOptionPane;
 import javax.xml.parsers.DocumentBuilder;
-import javax.xml.parsers.DocumentBuilderFactory;
 
 import org.joda.time.DateTime;
 import org.w3c.dom.DOMException;
@@ -122,7 +123,6 @@ import mekhq.campaign.event.GMModeEvent;
 import mekhq.campaign.event.LoanNewEvent;
 import mekhq.campaign.event.LoanPaidEvent;
 import mekhq.campaign.event.MedicPoolChangedEvent;
-import mekhq.campaign.event.MissionCompletedEvent;
 import mekhq.campaign.event.MissionNewEvent;
 import mekhq.campaign.event.NetworkChangedEvent;
 import mekhq.campaign.event.NewDayEvent;
@@ -174,6 +174,7 @@ import mekhq.campaign.parts.MissingPart;
 import mekhq.campaign.parts.OmniPod;
 import mekhq.campaign.parts.Part;
 import mekhq.campaign.parts.PartInUse;
+import mekhq.campaign.parts.PartInventory;
 import mekhq.campaign.parts.ProtomekArmor;
 import mekhq.campaign.parts.Refit;
 import mekhq.campaign.parts.StructuralIntegrity;
@@ -218,7 +219,9 @@ import mekhq.campaign.universe.RandomFactionGenerator;
 import mekhq.campaign.work.IAcquisitionWork;
 import mekhq.campaign.work.IPartWork;
 import mekhq.gui.GuiTabType;
+import mekhq.gui.dialog.HistoricalDailyReportDialog;
 import mekhq.gui.utilities.PortraitFileFactory;
+import mekhq.module.atb.AtBEventProcessor;
 
 /**
  * @author Taharqa The main campaign class, keeps track of teams and units
@@ -234,25 +237,16 @@ public class Campaign implements Serializable, ITechManager {
     // we will use the same basic system (borrowed from MegaMek) for tracking
     // all three
     // OK now we have more, parts, personnel, forces, missions, and scenarios.
-    // TODO: do we really need to track this in an array and hashtable?
-    // It seems like we could track in a hashtable and then iterate through the
-    // keys of the hash
-    // to create an arraylist on demand
-    private ArrayList<Unit> units = new ArrayList<Unit>();
-    private Hashtable<UUID, Unit> unitIds = new Hashtable<UUID, Unit>();
-    private ArrayList<Person> personnel = new ArrayList<Person>();
-    private Hashtable<UUID, Person> personnelIds = new Hashtable<UUID, Person>();
-    private ArrayList<Ancestors> ancestors = new ArrayList<Ancestors>();
-    private Hashtable<UUID, Ancestors> ancestorsIds = new Hashtable<UUID, Ancestors>();
-    private ArrayList<Part> parts = new ArrayList<Part>();
-    private Hashtable<Integer, Part> partIds = new Hashtable<Integer, Part>();
-    private Hashtable<Integer, Force> forceIds = new Hashtable<Integer, Force>();
-    private ArrayList<Mission> missions = new ArrayList<Mission>();
-    private Hashtable<Integer, Mission> missionIds = new Hashtable<Integer, Mission>();
-    private Hashtable<Integer, Scenario> scenarioIds = new Hashtable<Integer, Scenario>();
-    private ArrayList<Kill> kills = new ArrayList<Kill>();
+    private Map<UUID, Unit> units = new LinkedHashMap<UUID, Unit>();
+    private Map<UUID, Person> personnel = new LinkedHashMap<>();
+    private Map<UUID, Ancestors> ancestors = new LinkedHashMap<>();
+    private Map<Integer, Part> parts = new LinkedHashMap<>();
+    private Map<Integer, Force> forceIds = new LinkedHashMap<>();
+    private Map<Integer, Mission> missions = new LinkedHashMap<>();
+    private Map<Integer, Scenario> scenarios = new LinkedHashMap<>();
+    private List<Kill> kills = new ArrayList<>();
 
-    private Hashtable<String, Integer> duplicateNameHash = new Hashtable<String, Integer>();
+    private Map<String, Integer> duplicateNameHash = new HashMap<String, Integer>();
 
     private int astechPool;
     private int astechPoolMinutes;
@@ -295,6 +289,10 @@ public class Campaign implements Serializable, ITechManager {
     private transient String currentReportHTML;
     private transient List<String> newReports;
 
+    //this is updated and used per gaming session, it is enabled/disabled via the Campaign options
+    //we're re-using the LogEntry class that is used to store Personnel entries
+    public LinkedList<LogEntry> inMemoryLogHistory = new LinkedList<LogEntry>();
+
     private boolean overtime;
     private boolean gmMode;
     private transient boolean overviewLoadingValue = true;
@@ -325,6 +323,7 @@ public class Campaign implements Serializable, ITechManager {
     private RetirementDefectionTracker retirementDefectionTracker; // AtB
     private int fatigueLevel; //AtB
     private AtBConfiguration atbConfig; //AtB
+    private AtBEventProcessor atbEventProcessor; //AtB
     private Calendar shipSearchStart; //AtB
     private int shipSearchType;
     private String shipSearchResult; //AtB
@@ -354,7 +353,7 @@ public class Campaign implements Serializable, ITechManager {
         Ranks.initializeRankSystems();
         ranks = Ranks.getRanksFromSystem(Ranks.RS_SL);
         forces = new Force(name);
-        forceIds.put(new Integer(lastForceId), forces);
+        forceIds.put(Integer.valueOf(lastForceId), forces);
         lastForceId++;
         lances = new Hashtable<Integer, Lance>();
         finances = new Finances();
@@ -664,7 +663,7 @@ public class Campaign implements Serializable, ITechManager {
         } catch (Exception ex) {
             MekHQ.getLogger().log(getClass(), METHOD_NAME, LogLevel.ERROR,
                     "Unable to load unit: " + ms.getEntryName()); //$NON-NLS-1$
-            MekHQ.getLogger().log(getClass(), METHOD_NAME, ex);
+            MekHQ.getLogger().error(getClass(), METHOD_NAME, ex);
         }
         Entity en = mechFileParser.getEntity();
 
@@ -680,52 +679,59 @@ public class Campaign implements Serializable, ITechManager {
         shipSearchExpiration = null;
     }
 
+    /**
+     * Process retirements for retired personnel, if any.
+     * @param totalPayout The total retirement payout.
+     * @param unitAssignments List of unit assignments.
+     * @return False if there were payments AND they were unable to be processed, true otherwise.
+     */
     public boolean applyRetirement(long totalPayout, HashMap<UUID, UUID> unitAssignments) {
-        if (totalPayout > 0) {
-            if (null != getRetirementDefectionTracker().getRetirees()) {
-                if (getFinances().debit(totalPayout, Transaction.C_SALARY, "Final Payout", getDate())) {
-                    for (UUID pid : getRetirementDefectionTracker().getRetirees()) {
-                        if (getPerson(pid).isActive()) {
-                            changeStatus(getPerson(pid), Person.S_RETIRED);
-                            addReport(getPerson(pid).getFullName() + " has retired.");
-                        }
-                        if (Person.T_NONE != getRetirementDefectionTracker().getPayout(pid).getRecruitType()) {
-                            getPersonnelMarket().addPerson(
-                                    newPerson(getRetirementDefectionTracker().getPayout(pid).getRecruitType()));
-                        }
-                        if (getRetirementDefectionTracker().getPayout(pid).hasHeir()) {
-                            Person p = newPerson(getPerson(pid).getPrimaryRole());
-                            p.setOriginalUnitWeight(getPerson(pid).getOriginalUnitWeight());
-                            p.setOriginalUnitTech(getPerson(pid).getOriginalUnitTech());
-                            p.setOriginalUnitId(getPerson(pid).getOriginalUnitId());
-                            if (unitAssignments.containsKey(pid)) {
-                                getPersonnelMarket().addPerson(p, getUnit(unitAssignments.get(pid)).getEntity());
-                            } else {
-                                getPersonnelMarket().addPerson(p);
-                            }
-                        }
-                        int dependents = getRetirementDefectionTracker().getPayout(pid).getDependents();
-                        while (dependents > 0) {
-                            Person p = newPerson(Person.T_ASTECH);
-                            p.setDependent(true);
-                            if (recruitPerson(p)) {
-                                dependents--;
-                            } else {
-                                dependents = 0;
-                            }
-                        }
+        if ((totalPayout > 0) ||
+            (null != getRetirementDefectionTracker().getRetirees())) {
+            if (getFinances().debit(totalPayout, Transaction.C_SALARY, "Final Payout", getDate())) {
+                for (UUID pid : getRetirementDefectionTracker().getRetirees()) {
+                    if (getPerson(pid).isActive()) {
+                        changeStatus(getPerson(pid), Person.S_RETIRED);
+                        addReport(getPerson(pid).getFullName() + " has retired.");
+                    }
+                    if (Person.T_NONE != getRetirementDefectionTracker().getPayout(pid).getRecruitType()) {
+                        getPersonnelMarket().addPerson(
+                                newPerson(getRetirementDefectionTracker().getPayout(pid).getRecruitType()));
+                    }
+                    if (getRetirementDefectionTracker().getPayout(pid).hasHeir()) {
+                        Person p = newPerson(getPerson(pid).getPrimaryRole());
+                        p.setOriginalUnitWeight(getPerson(pid).getOriginalUnitWeight());
+                        p.setOriginalUnitTech(getPerson(pid).getOriginalUnitTech());
+                        p.setOriginalUnitId(getPerson(pid).getOriginalUnitId());
                         if (unitAssignments.containsKey(pid)) {
-                            removeUnit(unitAssignments.get(pid));
+                            getPersonnelMarket().addPerson(p, getUnit(unitAssignments.get(pid)).getEntity());
+                        } else {
+                            getPersonnelMarket().addPerson(p);
                         }
                     }
-                    getRetirementDefectionTracker().resolveAllContracts();
-                    return true;
-                } else {
-                    addReport("<font color='red'>You cannot afford to make the final payments.</font>");
+                    int dependents = getRetirementDefectionTracker().getPayout(pid).getDependents();
+                    while (dependents > 0) {
+                        Person p = newPerson(Person.T_ASTECH);
+                        p.setDependent(true);
+                        if (recruitPerson(p)) {
+                            dependents--;
+                        } else {
+                            dependents = 0;
+                        }
+                    }
+                    if (unitAssignments.containsKey(pid)) {
+                        removeUnit(unitAssignments.get(pid));
+                    }
                 }
+                getRetirementDefectionTracker().resolveAllContracts();
+                return true;
+            } else {
+                addReport("<font color='red'>You cannot afford to make the final payments.</font>");
+                return false;
             }
         }
-        return false;
+        
+        return true;
     }
 
     public News getNews() {
@@ -743,11 +749,11 @@ public class Campaign implements Serializable, ITechManager {
         force.setId(id);
         superForce.addSubForce(force, true);
         force.setScenarioId(superForce.getScenarioId());
-        forceIds.put(new Integer(id), force);
+        forceIds.put(Integer.valueOf(id), force);
         lastForceId = id;
 
         if (campaignOptions.getUseAtB() && force.getUnits().size() > 0) {
-            if (null == lances.get(id)) {
+            if (null == lances.get(Integer.valueOf(id))) {
                 lances.put(id, new Lance(force.getId(), this));
             }
         }
@@ -784,7 +790,7 @@ public class Campaign implements Serializable, ITechManager {
      * @param scenario
      */
     public void addScenarioToHash(Scenario scenario) {
-        scenarioIds.put(scenario.getId(), scenario);
+        scenarios.put(scenario.getId(), scenario);
     }
 
     /**
@@ -861,16 +867,14 @@ public class Campaign implements Serializable, ITechManager {
     public int addMission(Mission m) {
         int id = lastMissionId + 1;
         m.setId(id);
-        missions.add(m);
-        missionIds.put(new Integer(id), m);
+        missions.put(Integer.valueOf(id), m);
         lastMissionId = id;
         MekHQ.triggerEvent(new MissionNewEvent(m));
         return id;
     }
 
     private void addMissionWithoutId(Mission m) {
-        missions.add(m);
-        missionIds.put(new Integer(m.getId()), m);
+        missions.put(Integer.valueOf(m.getId()), m);
 
         if (m.getId() > lastMissionId) {
             lastMissionId = m.getId();
@@ -879,10 +883,10 @@ public class Campaign implements Serializable, ITechManager {
     }
 
     /**
-     * @return an <code>ArrayList</code> of missions in the campaign
+     * @return an <code>Collection</code> of missions in the campaign
      */
-    public ArrayList<Mission> getMissions() {
-        return missions;
+    public Collection<Mission> getMissions() {
+        return missions.values();
     }
 
     /**
@@ -896,7 +900,7 @@ public class Campaign implements Serializable, ITechManager {
         int id = lastScenarioId + 1;
         s.setId(id);
         m.addScenario(s);
-        scenarioIds.put(new Integer(id), s);
+        scenarios.put(Integer.valueOf(id), s);
         lastScenarioId = id;
         MekHQ.triggerEvent(new ScenarioNewEvent(s));
     }
@@ -905,17 +909,14 @@ public class Campaign implements Serializable, ITechManager {
      * @return missions arraylist sorted with complete missions at the bottom
      */
     public ArrayList<Mission> getSortedMissions() {
-        ArrayList<Mission> msns = new ArrayList<Mission>();
-        for (Mission m : getMissions()) {
-            msns.add(m);
-        }
+        ArrayList<Mission> msns = new ArrayList<>(missions.values());
         Collections.sort(msns, new Comparator<Mission>() {
             @Override
             public int compare(final Mission m1, final Mission m2) {
-                return ((Comparable<Boolean>) m2.isActive()).compareTo(m1
-                        .isActive());
+                return Boolean.compare(m2.isActive(), m1.isActive());
             }
         });
+
         return msns;
     }
 
@@ -924,11 +925,11 @@ public class Campaign implements Serializable, ITechManager {
      * @return a <code>SupportTeam</code> object
      */
     public Mission getMission(int id) {
-        return missionIds.get(new Integer(id));
+        return missions.get(Integer.valueOf(id));
     }
 
     public Scenario getScenario(int id) {
-        return scenarioIds.get(new Integer(id));
+        return scenarios.get(Integer.valueOf(id));
     }
 
     public CurrentLocation getLocation() {
@@ -938,8 +939,7 @@ public class Campaign implements Serializable, ITechManager {
     private void addUnit(Unit u) {
         MekHQ.getLogger().log(getClass(), "addUnit()", LogLevel.INFO, //$NON-NLS-1$
                 "Adding unit: (" + u.getId() + "):" + u); //$NON-NLS-1$
-        units.add(u);
-        unitIds.put(u.getId(), u);
+        units.put(u.getId(), u);
         checkDuplicateNamesDuringAdd(u.getEntity());
 
         // Assign an entity ID to our new unit
@@ -967,13 +967,12 @@ public class Campaign implements Serializable, ITechManager {
 
         UUID id = UUID.randomUUID();
         // check for the very rare chance of getting same id
-        while (null != unitIds.get(id)) {
+        while (null != units.get(id)) {
             id = UUID.randomUUID();
         }
         unit.getEntity().setExternalIdAsString(id.toString());
         unit.setId(id);
-        units.add(unit);
-        unitIds.put(id, unit);
+        units.put(id, unit);
 
         // now lets grab the parts from the test unit and set them up with this unit
         for(Part p : tu.getParts()) {
@@ -1010,14 +1009,13 @@ public class Campaign implements Serializable, ITechManager {
 
         UUID id = UUID.randomUUID();
         // check for the very rare chance of getting same id
-        while (null != unitIds.get(id)) {
+        while (null != units.get(id)) {
             id = UUID.randomUUID();
         }
         en.setExternalIdAsString(id.toString());
         Unit unit = new Unit(en, this);
         unit.setId(id);
-        units.add(unit);
-        unitIds.put(id, unit);
+        units.put(id, unit);
         removeUnitFromForce(unit); // Added to avoid the 'default force bug'
         // when calculating cargo
 
@@ -1029,7 +1027,7 @@ public class Campaign implements Serializable, ITechManager {
         unit.setDaysToArrival(days);
 
         if (allowNewPilots) {
-            Map<CrewType, Collection<Person>> newCrew = Utilities.genRandomCrewWithCombinedSkill(this, unit);
+            Map<CrewType, Collection<Person>> newCrew = Utilities.genRandomCrewWithCombinedSkill(this, unit, getFactionCode());
             newCrew.forEach((type, personnel) -> personnel.forEach(p -> type.addMethod.accept(unit, p)));
         }
         unit.resetPilotAndEntity();
@@ -1045,14 +1043,13 @@ public class Campaign implements Serializable, ITechManager {
         MekHQ.triggerEvent(new UnitNewEvent(unit));
     }
 
-    public ArrayList<Unit> getUnits() {
-        return getUnits(false, false);
+    public Collection<Unit> getUnits() {
+        return units.values();
     }
 
     public ArrayList<Unit> getUnits(boolean weightSorted, boolean alphaSorted) {
-        ArrayList<Unit> sortedUnits = null;
+        ArrayList<Unit> sortedUnits = getCopyOfUnits();
         if (alphaSorted || weightSorted) {
-            sortedUnits = getCopyOfUnits();
             if (alphaSorted) {
                 Collections.sort(sortedUnits, new Comparator<Unit>() {
                     @Override
@@ -1072,12 +1069,12 @@ public class Campaign implements Serializable, ITechManager {
                 });
             }
         }
-        return sortedUnits == null ? units : sortedUnits;
+        return sortedUnits;
     }
 
     // Since getUnits doesn't return a defensive copy and I don't know what I might break if I made it do so...
     public ArrayList<Unit> getCopyOfUnits() {
-        return new ArrayList<>(units);
+        return new ArrayList<>(units.values());
     }
 
     public ArrayList<Entity> getEntities() {
@@ -1092,7 +1089,7 @@ public class Campaign implements Serializable, ITechManager {
         if (null == id) {
             return null;
         }
-        return unitIds.get(id);
+        return units.get(id);
     }
 
     public boolean recruitPerson(Person p) {
@@ -1117,12 +1114,12 @@ public class Campaign implements Serializable, ITechManager {
             }
         }
         UUID id = UUID.randomUUID();
-        while (null != personnelIds.get(id)) {
+        while (null != personnel.get(id)) {
             id = UUID.randomUUID();
         }
         p.setId(id);
-        personnel.add(p);
-        personnelIds.put(id, p);
+        personnel.put(id, p);
+
         //TODO: implement a boolean check based on campaign options
         boolean bondsman = false;
         String add = prisoner == true ? " as a prisoner" : bondsman == true ? " as a bondsman" : "";
@@ -1164,18 +1161,16 @@ public class Campaign implements Serializable, ITechManager {
     }
 
     private void addPersonWithoutId(Person p) {
-        personnel.add(p);
-        personnelIds.put(p.getId(), p);
+        personnel.put(p.getId(), p);
         MekHQ.triggerEvent(new PersonNewEvent(p));
     }
 
     private void addAncestorsWithoutId(Ancestors a) {
-        ancestors.add(a);
-        ancestorsIds.put(a.getId(), a);
+        ancestors.put(a.getId(), a);
     }
 
     public void addPersonWithoutId(Person p, boolean log) {
-        while((null == p.getId()) || (null != personnelIds.get(p.getId()))) {
+        while((null == p.getId()) || (null != personnel.get(p.getId()))) {
             p.setId(UUID.randomUUID());
         }
         addPersonWithoutId(p);
@@ -1201,8 +1196,8 @@ public class Campaign implements Serializable, ITechManager {
         return calendar.getTime();
     }
 
-    public ArrayList<Person> getPersonnel() {
-        return personnel;
+    public Collection<Person> getPersonnel() {
+        return personnel.values();
     }
 
     /**
@@ -1217,13 +1212,14 @@ public class Campaign implements Serializable, ITechManager {
         return activePersonnel;
     }
 
-    public ArrayList<Ancestors> getAncestors() {
-        return ancestors;
+    public Iterable<Ancestors> getAncestors() {
+        return ancestors.values();
     }
 
     /** @return a matching ancestors entry for the arguments, or null if there isn't any */
     public Ancestors getAncestors(UUID fatherID, UUID motherID) {
-        for(Ancestors a : ancestors) {
+        for(Map.Entry<UUID, Ancestors> m : ancestors.entrySet()) {
+            Ancestors a = m.getValue();
             if(Objects.equals(fatherID, a.getFatherID()) && Objects.equals(motherID, a.getMotherID())) {
                 return a;
             }
@@ -1248,14 +1244,8 @@ public class Campaign implements Serializable, ITechManager {
             if (!u.isAvailable()) {
                 continue;
             }
-            if (u.isSalvage() || !u.isRepairable()) {
-                if (u.getSalvageableParts().size() > 0) {
-                    service.add(u);
-                }
-            } else {
-                if (u.getPartsNeedingFixing().size() > 0) {
-                    service.add(u);
-                }
+            if (u.isServiceable()) {
+                service.add(u);
             }
         }
         return service;
@@ -1265,20 +1255,19 @@ public class Campaign implements Serializable, ITechManager {
         if (id == null) {
             return null;
         }
-        return personnelIds.get(id);
+        return personnel.get(id);
     }
 
     public Ancestors getAncestors(UUID id) {
         if (id == null) {
             return null;
         }
-        return ancestorsIds.get(id);
+        return ancestors.get(id);
     }
 
     public Ancestors createAncestors(UUID father, UUID mother) {
         Ancestors na = new Ancestors(father, mother, this);
-        ancestorsIds.put(na.getId(), na);
-        ancestors.add(na);
+        ancestors.put(na.getId(), na);
         return na;
     }
 
@@ -1327,8 +1316,7 @@ public class Campaign implements Serializable, ITechManager {
                 return;
             }
         }
-        parts.add(p);
-        partIds.put(new Integer(id), p);
+        parts.put(Integer.valueOf(id), p);
         MekHQ.triggerEvent(new PartNewEvent(p));
     }
 
@@ -1408,8 +1396,7 @@ public class Campaign implements Serializable, ITechManager {
                 }
             }
         }
-        parts.add(p);
-        partIds.put(p.getId(), p);
+        parts.put(p.getId(), p);
 
         if (p.getId() > lastPartId) {
             lastPartId = p.getId();
@@ -1420,8 +1407,8 @@ public class Campaign implements Serializable, ITechManager {
     /**
      * @return an <code>ArrayList</code> of SupportTeams in the campaign
      */
-    public ArrayList<Part> getParts() {
-        return parts;
+    public Collection<Part> getParts() {
+        return parts.values();
     }
 
     private int getQuantity(Part p) {
@@ -1441,6 +1428,7 @@ public class Campaign implements Serializable, ITechManager {
         }
         // Makes no sense buying those separately from the chasis
         if((p instanceof EquipmentPart)
+                && ((EquipmentPart) p).getType() != null
                 && (((EquipmentPart) p).getType().hasFlag(MiscType.F_CHASSIS_MODIFICATION)))
         {
             return null;
@@ -1471,7 +1459,7 @@ public class Campaign implements Serializable, ITechManager {
         piu.setStoreCount(0);
         piu.setTransferCount(0);
         piu.setPlannedCount(0);
-        for(Part p : parts) {
+        for(Part p : getParts()) {
             PartInUse newPiu = getPartInUse(p);
             if(piu.equals(newPiu)) {
                 updatePartInUseData(piu, p);
@@ -1490,7 +1478,7 @@ public class Campaign implements Serializable, ITechManager {
     public Set<PartInUse> getPartsInUse() {
         // java.util.Set doesn't supply a get(Object) method, so we have to use a java.util.Map
         Map<PartInUse, PartInUse> inUse = new HashMap<PartInUse, PartInUse>();
-        for(Part p : parts) {
+        for(Part p : getParts()) {
             PartInUse piu = getPartInUse(p);
             if(null == piu) {
                 continue;
@@ -1524,11 +1512,11 @@ public class Campaign implements Serializable, ITechManager {
     }
 
     public Part getPart(int id) {
-        return partIds.get(new Integer(id));
+        return parts.get(Integer.valueOf(id));
     }
 
     public Force getForce(int id) {
-        return forceIds.get(new Integer(id));
+        return forceIds.get(Integer.valueOf(id));
     }
 
     public ArrayList<String> getCurrentReport() {
@@ -1673,6 +1661,25 @@ public class Campaign implements Serializable, ITechManager {
     public ArrayList<Person> getTechs() {
         return getTechs(false, null, true, false);
     }
+    
+    /**
+     * Gets a list of all techs of a specific role type
+     * @param roleType The filter role type
+     * @return Collection of all techs that match the given tech role
+     */
+    public List<Person> getTechsByRole(int roleType) {
+        List<Person> techs = getTechs(false, null, false, false);
+        List<Person> retval = new ArrayList<>();
+        
+        for(Person tech : techs) {
+            if((tech.getPrimaryRole() == roleType) ||
+                    (tech.getSecondaryRole() == roleType)) {
+                retval.add(tech);
+            }       
+        }
+        
+        return techs;
+    }
 
     public List<Person> getAdmins() {
         List<Person> admins = new ArrayList<Person>();
@@ -1685,7 +1692,8 @@ public class Campaign implements Serializable, ITechManager {
     }
 
     public boolean isWorkingOnRefit(Person p) {
-        for (Unit u : units) {
+        for (Map.Entry<UUID, Unit> mu : units.entrySet()) {
+            Unit u = mu.getValue();
             if (u.isRefitting()) {
                 if (null != u.getRefit().getTeamId()
                         && u.getRefit().getTeamId().equals(p.getId())) {
@@ -1834,7 +1842,7 @@ public class Campaign implements Serializable, ITechManager {
         if (skill.equals(CampaignOptions.S_AUTO)) {
             return admin;
         } else if (skill.equals(CampaignOptions.S_TECH)) {
-            for (Person p : personnel) {
+            for (Person p : getPersonnel()) {
                 if (getCampaignOptions().isAcquisitionSupportStaffOnly()
                         && !p.isSupport()) {
                     continue;
@@ -1849,7 +1857,7 @@ public class Campaign implements Serializable, ITechManager {
                 }
             }
         } else {
-            for (Person p : personnel) {
+            for (Person p : getPersonnel()) {
                 if (getCampaignOptions().isAcquisitionSupportStaffOnly()
                         && !p.isSupport()) {
                     continue;
@@ -2144,7 +2152,11 @@ public class Campaign implements Serializable, ITechManager {
                 }
                 partWork.setTeamId(tech.getId());
                 partWork.reservePart();
-                report += " - <b>Not enough time, the remainder of the task will be finished tomorrow.</b>";
+                report += " - <b>Not enough time, the remainder of the task";
+                if (null != partWork.getUnit()) {
+                    report += " on " + partWork.getUnit().getName();
+                }
+                report += " will be finished tomorrow.</b>";
                 MekHQ.triggerEvent(new PartWorkEvent(tech, partWork));
                 addReport(report);
                 return;
@@ -2198,6 +2210,13 @@ public class Campaign implements Serializable, ITechManager {
         }
         if (roll >= target.getValue()) {
             report = report + partWork.succeed();
+            if (getCampaignOptions().payForRepairs()
+                    && action == " fix "
+                    && !(partWork instanceof Armor)) {
+                int cost = (int) (((Part) partWork).getStickerPrice() * .2);
+                report += "<br>Repairs cost " + cost + " C-bills worth of parts.";
+                finances.debit(cost, Transaction.C_REPAIRS, "Repair of " + partWork.getPartName(), calendar.getTime());
+            }
             if (roll == 12 && target.getValue() != TargetRoll.AUTOMATIC_SUCCESS) {
                 xpGained += getCampaignOptions().getSuccessXP();
             }
@@ -2280,11 +2299,11 @@ public class Campaign implements Serializable, ITechManager {
         if (total >= 0 && role >= 0) {
             return 0;
         }
-        return Math.max(total, role);
+        return Math.abs(Math.min(total, role));
     }
     
     private void processNewDayATBScenarios() {
-        for (Mission m : missions) {
+        for (Mission m : getMissions()) {
             if (!m.isActive() || !(m instanceof AtBContract) || getDate().before(((Contract) m).getStartDate())) {
                 continue;
             }
@@ -2295,8 +2314,8 @@ public class Campaign implements Serializable, ITechManager {
              * unit is actually on route to the planet in case the user is using a custom
              * system for transport or splitting the unit, etc.
              */
-            if (!getLocation().isOnPlanet() && // null != getLocation().getJumpPath() &&
-                    getLocation().getJumpPath().getLastPlanet().getId().equals(m.getPlanetId(null))) {
+            if (!getLocation().isOnPlanet() && 
+                    getLocation().getJumpPath().getLastPlanet().getId().equals(m.getPlanetId())) {
                 /*
                  * transitTime is measured in days; round up to the next whole day, then convert
                  * to milliseconds
@@ -2338,7 +2357,7 @@ public class Campaign implements Serializable, ITechManager {
             AtBScenarioFactory.createScenariosForNewWeek(this, true);
         }
 
-        for (Mission m : missions) {
+        for (Mission m : getMissions()) {
             if (m.isActive() && m instanceof AtBContract && !((AtBContract) m).getStartDate().after(getDate())) {
                 ((AtBContract) m).checkEvents(this);
             }
@@ -2380,7 +2399,7 @@ public class Campaign implements Serializable, ITechManager {
 
     private void processNewDayATBFatigue() {
         boolean inContract = false;
-        for (Mission m : missions) {
+        for (Mission m : getMissions()) {
             if (!m.isActive() || !(m instanceof AtBContract) || getDate().before(((Contract) m).getStartDate())) {
                 continue;
             }
@@ -2434,7 +2453,7 @@ public class Campaign implements Serializable, ITechManager {
         if (calendar.get(Calendar.DAY_OF_YEAR) == 1) {
             int numPersonnel = 0;
             ArrayList<Person> dependents = new ArrayList<Person>();
-            for (Person p : personnel) {
+            for (Person p : getPersonnel()) {
                 if (p.isActive()) {
                     numPersonnel++;
                     if (p.isDependent()) {
@@ -2462,16 +2481,13 @@ public class Campaign implements Serializable, ITechManager {
 
         if (calendar.get(Calendar.DAY_OF_MONTH) == 1) {
             /*
-             * First of the month; update employer/enemy tables, roll morale, track unit
-             * fatigue.
+             * First of the month; roll morale, track unit fatigue.
              */
 
-            RandomFactionGenerator.getInstance().updateTables(calendar.getTime(), location.getCurrentPlanet(),
-                    campaignOptions);
             IUnitRating rating = getUnitRating();
             rating.reInitialize();
 
-            for (Mission m : missions) {
+            for (Mission m : getMissions()) {
                 if (m.isActive() && m instanceof AtBContract && !((AtBContract) m).getStartDate().after(getDate())) {
                     ((AtBContract) m).checkMorale(calendar, getUnitRatingMod());
                     addReport("Enemy morale is now " + ((AtBContract) m).getMoraleLevelName() + " on contract "
@@ -2661,7 +2677,7 @@ public class Campaign implements Serializable, ITechManager {
         currentReport.clear();
         currentReportHTML = "";
         newReports.clear();
-        addReport("<b>" + getDateAsString() + "</b>");
+        beginReport("<b>" + getDateAsString() + "</b>");
 
         if (calendar.get(Calendar.DAY_OF_YEAR) == 1) {
             reloadNews();
@@ -2728,8 +2744,14 @@ public class Campaign implements Serializable, ITechManager {
     }
 
     public long getPayRoll(boolean noInfantry) {
+        if(!campaignOptions.payForSalaries()) return 0;
+
+        return getTheoreticalPayroll(noInfantry);
+    }
+
+    private long getTheoreticalPayroll(boolean noInfantry){
         long salaries = 0;
-        for (Person p : personnel) {
+        for (Person p : getPersonnel()) {
             // Optionized infantry (Unofficial)
             if (noInfantry && p.getPrimaryRole() == Person.T_INFANTRY) {
                 continue;
@@ -2750,9 +2772,12 @@ public class Campaign implements Serializable, ITechManager {
 
     public long getMaintenanceCosts() {
         long costs = 0;
-        for (Unit u : units) {
-            if (u.requiresMaintenance() && null != u.getTech()) {
-                costs += u.getMaintenanceCost();
+        if(campaignOptions.payForMaintain()) {
+            for (Map.Entry<UUID, Unit> mu : units.entrySet()) {
+                Unit u = mu.getValue();
+                if (u.requiresMaintenance() && null != u.getTech()) {
+                    costs += u.getMaintenanceCost();
+                }
             }
         }
         return costs;
@@ -2760,21 +2785,16 @@ public class Campaign implements Serializable, ITechManager {
 
     public long getWeeklyMaintenanceCosts() {
         long costs = 0;
-        for (Unit u : units) {
-            costs += u.getWeeklyMaintenanceCost();
+        for (Map.Entry<UUID, Unit> u : units.entrySet()) {
+            costs += u.getValue().getWeeklyMaintenanceCost();
         }
         return costs;
     }
 
     public long getOverheadExpenses() {
-        return (long) (getPayRoll() * 0.05);
-    }
+        if(!campaignOptions.payForOverhead()) return 0;
 
-    public void clearAllUnits() {
-        this.units = new ArrayList<Unit>();
-        this.unitIds = new Hashtable<UUID, Unit>();
-        // TODO: clear parts associated with unit
-
+        return (long) (getTheoreticalPayroll(false) * 0.05);
     }
 
     public void removeUnit(UUID id) {
@@ -2799,8 +2819,7 @@ public class Campaign implements Serializable, ITechManager {
         removeUnitFromForce(unit);
 
         // finally remove the unit
-        units.remove(unit);
-        unitIds.remove(unit.getId());
+        units.remove(unit.getId());
         checkDuplicateNamesDuringDelete(unit.getEntity());
         addReport(unit.getName() + " has been removed from the unit roster.");
         MekHQ.triggerEvent(new UnitRemovedEvent(unit));
@@ -2829,8 +2848,7 @@ public class Campaign implements Serializable, ITechManager {
                     + " has been removed from the personnel roster.");
         }
 
-        personnel.remove(person);
-        personnelIds.remove(id);
+        personnel.remove(id);
         if (person.getPrimaryRole() == Person.T_ASTECH) {
             astechPoolMinutes = Math.max(0, astechPoolMinutes - 480);
             astechPoolOvertime = Math.max(0, astechPoolOvertime - 240);
@@ -2843,24 +2861,53 @@ public class Campaign implements Serializable, ITechManager {
     }
 
     public void awardTrainingXP(Lance l) {
+        awardTrainingXPByMaximumRole(l);
+    }
+
+    /**
+     * Awards XP to the lance based on the maximum experience level of its
+     * commanding officer and the minumum experience level of the unit's
+     * members.
+     * @param l The {@link Lance} to calculate XP to award for training.
+     */
+    private void awardTrainingXPByMaximumRole(Lance l) {
         for (UUID trainerId : forceIds.get(l.getForceId()).getAllUnits()) {
-            if (getUnit(trainerId).getCommander() != null && getUnit(trainerId).getCommander().getRank().isOfficer()
-                    && getUnit(trainerId).getCommander().getExperienceLevel(false) > SkillType.EXP_REGULAR) {
-                for (UUID traineeId : forceIds.get(l.getForceId()).getAllUnits()) {
-                    for (Person p : getUnit(traineeId).getCrew()) {
-                        if (p.getExperienceLevel(false) < SkillType.EXP_REGULAR) {
-                            p.setXp(p.getXp() + 1);
-                            addReport(p.getHyperlinkedName() + " has gained 1 XP from training.");
+            Person commander = getUnit(trainerId).getCommander();
+            // AtB 2.31: Training lance – needs a officer with Veteran skill levels
+            //           and adds 1xp point to every Green skilled unit.
+            if (commander != null && commander.getRank().isOfficer()) {
+                // Take the maximum of the commander's Primary and Secondary Role
+                // experience to calculate their experience level...
+                int commanderExperience = Math.max(commander.getExperienceLevel(false),
+                        commander.getExperienceLevel(true));
+                if (commanderExperience > SkillType.EXP_REGULAR) {
+                    // ...and if the commander is better than a veteran, find all of
+                    // the personnel under their command...
+                    for (UUID traineeId : forceIds.get(l.getForceId()).getAllUnits()) {
+                        for (Person p : getUnit(traineeId).getCrew()) {
+                            if (p == commander) {
+                                continue;
+                            }
+                            // ...and if their weakest role is Green or Ultra-Green
+                            int experienceLevel = Math.min(p.getExperienceLevel(false),
+                                    p.getSecondaryRole() != Person.T_NONE
+                                            ? p.getExperienceLevel(true)
+                                            : SkillType.EXP_ELITE);
+                            if (experienceLevel >= 0 && experienceLevel < SkillType.EXP_REGULAR) {
+                                // ...add one XP.
+                                p.setXp(p.getXp() + 1);
+                                addReport(p.getHyperlinkedName() + " has gained 1 XP from training.");
+                            }
                         }
                     }
+                    break;
                 }
-                break;
             }
         }
     }
 
     public void removeAllPatientsFor(Person doctor) {
-        for (Person p : personnel) {
+        for (Person p : getPersonnel()) {
             if (null != p.getDoctorId()
                     && p.getDoctorId().equals(doctor.getId())) {
                 p.setDoctorId(null, getCampaignOptions()
@@ -2873,7 +2920,8 @@ public class Campaign implements Serializable, ITechManager {
         if (tech == null || tech.getId() == null) {
             return;
         }
-        for (Unit u : units) {
+        for (Map.Entry<UUID, Unit> mu : units.entrySet()) {
+            Unit u = mu.getValue();
             if (tech.getId().equals(u.getTechId())) {
                 u.removeTech();
             }
@@ -2881,7 +2929,7 @@ public class Campaign implements Serializable, ITechManager {
                 u.getRefit().setTeamId(null);
             }
         }
-        for (Part p : parts) {
+        for (Part p : getParts()) {
             if (tech.getId().equals(p.getTeamId())) {
                 p.setTeamId(null);
             }
@@ -2900,34 +2948,23 @@ public class Campaign implements Serializable, ITechManager {
         if (null != mission) {
             mission.removeScenario(scenario.getId());
         }
-        scenarioIds.remove(new Integer(id));
+        scenarios.remove(Integer.valueOf(id));
         MekHQ.triggerEvent(new ScenarioChangedEvent(scenario));
     }
 
     public void removeMission(int id) {
         Mission mission = getMission(id);
-        int idx = 0;
+
         // Loop through scenarios here! We need to remove them as well.
         if (null != mission) {
             for (Scenario scenario : mission.getScenarios()) {
                 scenario.clearAllForcesAndPersonnel(this);
-                scenarioIds.remove(scenario.getId());
+                scenarios.remove(scenario.getId());
             }
             mission.clearScenarios();
         }
-        idx = 0;
-        boolean mfound = false;
-        for (Mission m : getMissions()) {
-            if (m.getId() == id) {
-                mfound = true;
-                break;
-            }
-            idx++;
-        }
-        if (mfound) {
-            missions.remove(idx);
-        }
-        missionIds.remove(new Integer(id));
+
+        missions.remove(Integer.valueOf(id));
     }
 
     public void removePart(Part part) {
@@ -2935,8 +2972,7 @@ public class Campaign implements Serializable, ITechManager {
             // if this is a test unit, then we won't remove the part because its not there
             return;
         }
-        parts.remove(part);
-        partIds.remove(new Integer(part.getId()));
+        parts.remove(Integer.valueOf(part.getId()));
         //remove child parts as well
         for(int childId : part.getChildPartIds()) {
             Part childPart = getPart(childId);
@@ -2953,7 +2989,7 @@ public class Campaign implements Serializable, ITechManager {
 
     public void removeForce(Force force) {
         int fid = force.getId();
-        forceIds.remove(new Integer(fid));
+        forceIds.remove(Integer.valueOf(fid));
         // clear forceIds of all personnel with this force
         for (UUID uid : force.getUnits()) {
             Unit u = getUnit(uid);
@@ -3087,14 +3123,7 @@ public class Campaign implements Serializable, ITechManager {
         shoppingList.restore();
 
         if (getCampaignOptions().getUseAtB()) {
-            while (!RandomFactionGenerator.getInstance().isInitialized()) {
-                //Sleep for up to one second.
-                try {
-                    Thread.sleep(50);
-                } catch (InterruptedException ignore) {
-
-                }
-            }
+            RandomFactionGenerator.getInstance().startup(this);
             while (!RandomUnitGenerator.getInstance().isInitialized()) {
                 //Sleep for up to one second.
                 try {
@@ -3104,8 +3133,7 @@ public class Campaign implements Serializable, ITechManager {
                 }
             }
             RandomNameGenerator.getInstance();
-            RandomFactionGenerator.getInstance().updateTables(getDate(), location.getCurrentPlanet(),
-                    getCampaignOptions());
+            RandomFactionGenerator.getInstance().startup(this);
         }
     }
 
@@ -3152,7 +3180,43 @@ public class Campaign implements Serializable, ITechManager {
         retainerEmployerCode = code;
     }
 
+    private void addInMemoryLogHistory(LogEntry le) {
+        if (inMemoryLogHistory.size() != 0) {
+            long diff = le.getDate().getTime() - inMemoryLogHistory.get(0).getDate().getTime();
+            while ((diff / (1000 * 60 * 60 * 24)) > HistoricalDailyReportDialog.MAX_DAYS_HISTORY) {
+                //we've hit the max size for the in-memory based on the UI display limit
+                //prune the oldest entry
+                inMemoryLogHistory.remove(0);
+                diff = le.getDate().getTime() - inMemoryLogHistory.get(0).getDate().getTime();
+            }
+        }
+        inMemoryLogHistory.add(le);
+    }
+
+    /**
+     * Starts a new day for the daily log
+     * @param r - the report String
+     */
+    public void beginReport(String r) {
+        if (this.getCampaignOptions().historicalDailyLog()) {
+            //add the new items to our in-memory cache
+            addInMemoryLogHistory(new LogEntry(getDate(), ""));
+        }
+        addReportInternal(r);
+    }
+
+    /**
+     * Adds a report to the daily log
+     * @param r - the report String
+     */
     public void addReport(String r) {
+        if (this.getCampaignOptions().historicalDailyLog()) {
+            addInMemoryLogHistory(new LogEntry(getDate(), r));
+        }
+        addReportInternal(r);
+    }
+
+    private void addReportInternal(String r) {
         currentReport.add(r);
         if( currentReportHTML.length() > 0 ) {
             currentReportHTML = currentReportHTML + REPORT_LINEBREAK + r;
@@ -3374,7 +3438,7 @@ public class Campaign implements Serializable, ITechManager {
         try {
             mechFileParser = new MechFileParser(mechSummary.getSourceFile());
         } catch (EntityLoadingException ex) {
-            MekHQ.getLogger().log(Campaign.class, "getBrandNewUndamagedEntity(String)", ex);
+            MekHQ.getLogger().error(Campaign.class, "getBrandNewUndamagedEntity(String)", ex);
         }
         if (mechFileParser == null) {
             return null;
@@ -3472,11 +3536,10 @@ public class Campaign implements Serializable, ITechManager {
         }
 
         // Lists of objects:
-        writeArrayAndHashToXmlforUUID(pw1, 1, "units", units, unitIds); // Units
-        writeArrayAndHashToXmlforUUID(pw1, 1, "personnel", personnel,
-                personnelIds); // Personnel
-        writeArrayAndHashToXmlforUUID(pw1, 1, "ancestors", ancestors, ancestorsIds); // Ancestry trees
-        writeArrayAndHashToXml(pw1, 1, "missions", missions, missionIds); // Missions
+        writeMapToXml(pw1, 1, "units", units); // Units
+        writeMapToXml(pw1, 1, "personnel", personnel); // Personnel
+        writeMapToXml(pw1, 1, "ancestors", ancestors); // Ancestry trees
+        writeMapToXml(pw1, 1, "missions", missions); // Missions
         // the forces structure is hierarchical, but that should be handled
         // internally
         // from with writeToXML function for Force
@@ -3506,7 +3569,7 @@ public class Campaign implements Serializable, ITechManager {
         pw1.println("\t</specialAbilities>");
         rskillPrefs.writeToXml(pw1, 1);
         // parts is the biggest so it goes last
-        writeArrayAndHashToXml(pw1, 1, "parts", parts, partIds); // Parts
+        writeMapToXml(pw1, 1, "parts", parts); // Parts
 
         writeGameOptions(pw1);
 
@@ -3633,6 +3696,27 @@ public class Campaign implements Serializable, ITechManager {
 
         pw1.println(MekHqXmlUtil.indentStr(indent) + "</" + tag + ">");
     }
+    
+    /**
+     * A helper function to encapsulate writing the map entries out to XML.
+     *
+     * @param <keyType> The key type of the map.
+     * @param <arrType> The object type of the map. Must implement MekHqXmlSerializable.
+     * @param pw1       The PrintWriter to output XML to.
+     * @param indent    The indentation level to use for writing XML (purely for neatness).
+     * @param tag       The name of the tag to use to encapsulate it.
+     * @param map       The map of objects to write out.
+     */
+    private <keyType, valueType extends MekHqXmlSerializable> void writeMapToXml(PrintWriter pw1,
+            int indent, String tag, Map<keyType, valueType> map) {
+        pw1.println(MekHqXmlUtil.indentStr(indent) + "<" + tag + ">");
+
+        for (Map.Entry<keyType, valueType> x : map.entrySet()) {
+            x.getValue().writeToXml(pw1, indent + 1);
+        }
+
+        pw1.println(MekHqXmlUtil.indentStr(indent) + "</" + tag + ">");
+    }
 
     private void writeCustoms(PrintWriter pw1) {
         for (String name : customs) {
@@ -3645,7 +3729,7 @@ public class Campaign implements Serializable, ITechManager {
             try {
                 mechFileParser = new MechFileParser(ms.getSourceFile());
             } catch (EntityLoadingException ex) {
-                MekHQ.getLogger().log(Campaign.class, "writeCustoms(PrintWriter)", ex);
+                MekHQ.getLogger().error(Campaign.class, "writeCustoms(PrintWriter)", ex);
             }
             if (mechFileParser == null) {
                 continue;
@@ -3692,17 +3776,17 @@ public class Campaign implements Serializable, ITechManager {
         // Initialize variables.
         Campaign retVal = new Campaign();
         retVal.app = app;
-        DocumentBuilderFactory dbf = DocumentBuilderFactory.newInstance();
+
         Document xmlDoc = null;
 
         try {
             // Using factory get an instance of document builder
-            DocumentBuilder db = dbf.newDocumentBuilder();
+            DocumentBuilder db = MekHqXmlUtil.newSafeDocumentBuilder();
 
             // Parse using builder to get DOM representation of the XML file
             xmlDoc = db.parse(fis);
         } catch (Exception ex) {
-            MekHQ.getLogger().log(Campaign.class, METHOD_NAME, ex);
+            MekHQ.getLogger().error(Campaign.class, METHOD_NAME, ex);
         }
 
         Element campaignEle = xmlDoc.getDocumentElement();
@@ -3915,8 +3999,9 @@ public class Campaign implements Serializable, ITechManager {
         long timestamp = System.currentTimeMillis();
 
         // loop through forces to set force id
-        for (int fid : retVal.forceIds.keySet()) {
-            Force f = retVal.forceIds.get(fid);
+        for (Map.Entry<Integer, Force> mf : retVal.forceIds.entrySet()) {
+            int fid = mf.getKey();
+            Force f = mf.getValue();
             Scenario s = retVal.getScenario(f.getScenarioId());
             if (null != s
                     && (null == f.getParentForce() || !f.getParentForce().isDeployed())) {
@@ -3942,8 +4027,7 @@ public class Campaign implements Serializable, ITechManager {
         // Process parts...
         ArrayList<Part> spareParts = new ArrayList<Part>();
         ArrayList<Part> removeParts = new ArrayList<Part>();
-        for (int x = 0; x < retVal.parts.size(); x++) {
-            Part prt = retVal.parts.get(x);
+        for (Part prt : retVal.getParts()) {
             Unit u = retVal.getUnit(prt.getUnitId());
             prt.setUnit(u);
             if (null != u) {
@@ -4085,9 +4169,7 @@ public class Campaign implements Serializable, ITechManager {
         timestamp = System.currentTimeMillis();
 
         // All personnel need the rank reference fixed
-        for (int x = 0; x < retVal.personnel.size(); x++) {
-            Person psn = retVal.personnel.get(x);
-
+        for (Person psn : retVal.getPersonnel()) {
             // skill types might need resetting
             psn.resetSkillTypes();
 
@@ -4124,7 +4206,7 @@ public class Campaign implements Serializable, ITechManager {
         timestamp = System.currentTimeMillis();
 
         // Okay, Units, need their pilot references fixed.
-        for(Unit unit : retVal.units) {
+        for(Unit unit : retVal.getUnits()) {
             // Also, the unit should have its campaign set.
             unit.campaign = retVal;
 
@@ -4135,9 +4217,12 @@ public class Campaign implements Serializable, ITechManager {
                 unit.getRefit().reCalc();
                 if (null == unit.getRefit().getNewArmorSupplies()
                         && unit.getRefit().getNewArmorSuppliesId() > 0) {
-                    unit.getRefit().setNewArmorSupplies(
-                            (Armor) retVal.getPart(unit.getRefit()
-                                    .getNewArmorSuppliesId()));
+                    Armor armorSupplies = (Armor) retVal.getPart(
+                            unit.getRefit().getNewArmorSuppliesId());
+                    unit.getRefit().setNewArmorSupplies(armorSupplies);
+                    if (null == armorSupplies.getUnit()) {
+                        armorSupplies.setUnit(unit);
+                    }
                 }
                 if (!unit.getRefit().isCustomJob()
                         && !unit.getRefit().kitFound()) {
@@ -4192,7 +4277,7 @@ public class Campaign implements Serializable, ITechManager {
                         System.currentTimeMillis() - timestamp));
         timestamp = System.currentTimeMillis();
 
-        for(Unit unit : retVal.units) {
+        for(Unit unit : retVal.getUnits()) {
             // Some units have been incorrectly assigned a null C3UUID as a string. This should correct that by setting a new C3UUID
             if ((unit.getEntity().hasC3() || unit.getEntity().hasC3i())
                     && (unit.getEntity().getC3UUIDAsString() == null || unit.getEntity().getC3UUIDAsString().equals("null"))) {
@@ -4208,23 +4293,25 @@ public class Campaign implements Serializable, ITechManager {
         timestamp = System.currentTimeMillis();
 
         // ok, once we are sure that campaign has been set for all units, we can
-        // now go
-        // through and initializeParts and run diagnostics
-        for (int x = 0; x < retVal.units.size(); x++) {
-            Unit unit = retVal.units.get(x);
+        // now go through and initializeParts and run diagnostics
+        List<Unit> removeUnits = new ArrayList<>();
+        for (Unit unit : retVal.getUnits()) {
             // just in case parts are missing (i.e. because they weren't tracked
             // in previous versions)            
             unit.initializeParts(true);
             unit.runDiagnostic(false);
             if (!unit.isRepairable()) {
-                if (unit.getSalvageableParts().isEmpty()) {
+                if (!unit.hasSalvageableParts()) {
                     // we shouldnt get here but some units seem to stick around
                     // for some reason
-                    retVal.removeUnit(unit.getId());
+                    removeUnits.add(unit);
                 } else {
                     unit.setSalvage(true);
                 }
             }
+        }
+        for (Unit unit : removeUnits) {
+            retVal.removeUnit(unit.getId());
         }
 
         MekHQ.getLogger().log(Campaign.class, METHOD_NAME, LogLevel.INFO,
@@ -4254,6 +4341,7 @@ public class Campaign implements Serializable, ITechManager {
         }
         if (retVal.getCampaignOptions().getUseAtB()) {
             retVal.atbConfig = AtBConfiguration.loadFromXml();
+            retVal.atbEventProcessor = new AtBEventProcessor(retVal);
         }
 
         //**EVERYTHING HAS BEEN LOADED. NOW FOR SANITY CHECKS**//
@@ -4381,23 +4469,23 @@ public class Campaign implements Serializable, ITechManager {
 
     private static void fixIdReferences(Campaign retVal) {
         // set up translation hashes
-        Hashtable<Integer, UUID> uHash = new Hashtable<Integer, UUID>();
-        Hashtable<Integer, UUID> pHash = new Hashtable<Integer, UUID>();
-        for (Unit u : retVal.units) {
+        Map<Integer, UUID> uHash = new HashMap<>();
+        Map<Integer, UUID> pHash = new HashMap<>();
+        for (Unit u : retVal.getUnits()) {
             uHash.put(u.getOldId(), u.getId());
         }
-        for (Person p : retVal.personnel) {
+        for (Person p : retVal.getPersonnel()) {
             pHash.put(p.getOldId(), p.getId());
         }
         // ok now go through and fix
-        for (Unit u : retVal.units) {
+        for (Unit u : retVal.getUnits()) {
             u.fixIdReferences(uHash, pHash);
         }
-        for (Person p : retVal.personnel) {
+        for (Person p : retVal.getPersonnel()) {
             p.fixIdReferences(uHash, pHash);
         }
         retVal.forces.fixIdReferences(uHash);
-        for (Part p : retVal.parts) {
+        for (Part p : retVal.getParts()) {
             p.fixIdReferences(uHash, pHash);
         }
         ArrayList<Kill> ghostKills = new ArrayList<Kill>();
@@ -4416,9 +4504,9 @@ public class Campaign implements Serializable, ITechManager {
     }
 
     private static void fixIdReferencesB(Campaign retVal) {
-        for (Unit u : retVal.units) {
-            Entity en = u.getEntity();
-            UUID id = u.getId();
+        for (Map.Entry<UUID, Unit> u : retVal.units.entrySet()) {
+            Entity en = u.getValue().getEntity();
+            UUID id = u.getKey();
             en.setExternalIdAsString(id.toString());
 
             // If they have C3 or C3i we need to set their ID
@@ -5307,15 +5395,20 @@ public class Campaign implements Serializable, ITechManager {
         return plntNames;
     }
 
-    public Planet getPlanet(String name) {
+    public Planet getPlanetByName(String name) {
         return Planets.getInstance().getPlanetByName(name, Utilities.getDateTimeDay(calendar));
     }
 
     public Person newPerson(int type) {
-        if (type == Person.T_LAM_PILOT) {
-            return newPerson(Person.T_MECHWARRIOR, Person.T_AERO_PILOT);
-        }
-        return newPerson(type, Person.T_NONE);
+        return newPerson(type, getFactionCode());
+    }
+
+    public Person newPerson(int type, int secondary) {
+        return newPerson(type, secondary, getFactionCode());
+    }
+    
+    public Person newPerson(int type, String factionCode) {
+        return newPerson(type, Person.T_NONE, factionCode);
     }
 
     /**
@@ -5326,9 +5419,13 @@ public class Campaign implements Serializable, ITechManager {
      * @param secondary A secondary role; used for LAM pilots to generate MW + Aero pilot
      * @return
      */
-    public Person newPerson(int type, int secondary) {
+    public Person newPerson(int type, int secondary, String factionCode) {
+        if (type == Person.T_LAM_PILOT) {
+            type = Person.T_MECHWARRIOR;
+            secondary = Person.T_AERO_PILOT;
+        }
         boolean isFemale = getRNG().isFemale();
-        Person person = new Person(this);
+        Person person = new Person(this, factionCode);
         if (isFemale) {
             person.setGender(Person.G_FEMALE);
         }
@@ -5467,7 +5564,7 @@ public class Campaign implements Serializable, ITechManager {
         }
         //check for Bloodname
         if (person.isClanner()) {
-            checkBloodnameAdd(person, type);
+            checkBloodnameAdd(person, type, factionCode);
         }
 
         return person;
@@ -5578,11 +5675,59 @@ public class Campaign implements Serializable, ITechManager {
         }
     }
 
+    /**
+     * If the person does not already have a bloodname, assigns a chance of having one based on
+     * skill and rank. If the roll indicates there should be a bloodname, one is assigned as
+     * appropriate to the person's phenotype and the player's faction.
+     * 
+     * @param person       The Bloodname candidate
+     * @param type         The phenotype index
+     */
     public void checkBloodnameAdd(Person person, int type) {
-        checkBloodnameAdd(person, type, false);
+        checkBloodnameAdd(person, type, false, this.factionCode);
+    }
+    
+    /**
+     * If the person does not already have a bloodname, assigns a chance of having one based on
+     * skill and rank. If the roll indicates there should be a bloodname, one is assigned as
+     * appropriate to Clan and phenotype.
+     * 
+     * @param person       The Bloodname candidate
+     * @param type         The phenotype index
+     * @param factionCode  The shortName of the faction the person belongs to. Note that there
+     *                     is a chance of having a Bloodname that is unique to a different Clan
+     *                     as this person could have been captured.
+     */
+    public void checkBloodnameAdd(Person person, int type, String factionCode) {
+        checkBloodnameAdd(person, type, false, factionCode);
+    }
+    
+    /**
+     * If the person does not already have a bloodname, assigns a chance of having one based on
+     * skill and rank. If the roll indicates there should be a bloodname, one is assigned as
+     * appropriate to the person's phenotype and the player's faction.
+     * 
+     * @param person       The Bloodname candidate
+     * @param type         The phenotype index
+     * @param ignoreDice   If true, skips the random roll and assigns a Bloodname automatically
+     */
+    public void checkBloodnameAdd(Person person, int type, boolean ignoreDice) {
+        checkBloodnameAdd(person, type, ignoreDice, this.factionCode);
     }
 
-    public void checkBloodnameAdd(Person person, int type, boolean ignoreDice) {
+    /**
+     * If the person does not already have a bloodname, assigns a chance of having one based on
+     * skill and rank. If the roll indicates there should be a bloodname, one is assigned as
+     * appropriate to Clan and phenotype.
+     * 
+     * @param person       The Bloodname candidate
+     * @param type         The phenotype index
+     * @param ignoreDice   If true, skips the random roll and assigns a Bloodname automatically
+     * @param factionCode  The shortName of the faction the person belongs to. Note that there
+     *                     is a chance of having a Bloodname that is unique to a different Clan
+     *                     as this person could have been captured.
+     */
+    public void checkBloodnameAdd(Person person, int type, boolean ignoreDice, String factionCode) {
         // Person already has a bloodname?
         if (person.getBloodname().length() > 0) {
             int result = JOptionPane.showConfirmDialog(null,
@@ -5695,7 +5840,10 @@ public class Campaign implements Serializable, ITechManager {
                         phenotype = Bloodname.P_PROTOMECH;
                         break;
                 }
-                person.setBloodname(Bloodname.randomBloodname(factionCode, phenotype, getGameYear()).getName());
+                Bloodname bloodname = Bloodname.randomBloodname(factionCode, phenotype, getGameYear());
+                if (null != bloodname) {
+                    person.setBloodname(bloodname.getName());
+                }
             }
         }
         MekHQ.triggerEvent(new PersonChangedEvent(person));
@@ -5733,7 +5881,7 @@ public class Campaign implements Serializable, ITechManager {
             person.acquireAbility(PilotOptions.LVL3_ADVANTAGES, name, special);
         } else if (name.equals("range_master")) {
             String special = Crew.RANGEMASTER_NONE;
-            switch (Compute.randomInt(3)) {
+            switch (Compute.randomInt(2)) {
                 case 0:
                     special = Crew.RANGEMASTER_MEDIUM;
                     break;
@@ -5742,9 +5890,6 @@ public class Campaign implements Serializable, ITechManager {
                     break;
                 case 2:
                     special = Crew.RANGEMASTER_EXTREME;
-                    break;
-                case 3:
-                    special = Crew.RANGEMASTER_LOS;
                     break;
             }
             person.acquireAbility(PilotOptions.LVL3_ADVANTAGES, name,
@@ -5808,10 +5953,7 @@ public class Campaign implements Serializable, ITechManager {
     }
 
     public ArrayList<Force> getAllForces() {
-        ArrayList<Force> allForces = new ArrayList<Force>();
-        for (int x : forceIds.keySet()) {
-            allForces.add(forceIds.get(x));
-        }
+        ArrayList<Force> allForces = new ArrayList<Force>(forceIds.values());
         return allForces;
     }
 
@@ -6592,7 +6734,7 @@ public class Campaign implements Serializable, ITechManager {
      */
     public int totalBonusParts() {
         int retVal = 0;
-        for (Mission m : missions) {
+        for (Mission m : getMissions()) {
             if (m.isActive() && m instanceof AtBContract) {
                 retVal += ((AtBContract) m).getNumBonusParts();
             }
@@ -6606,7 +6748,7 @@ public class Campaign implements Serializable, ITechManager {
          * If the unit is not assigned to a contract, use the least restrictive active
          * contract
          */
-        for (Mission m : missions) {
+        for (Mission m : getMissions()) {
             if (m.isActive() && m instanceof AtBContract) {
                 if (null == contract
                         || ((AtBContract) m).getPartsAvailabilityLevel() > contract.getPartsAvailabilityLevel()) {
@@ -6978,15 +7120,14 @@ public class Campaign implements Serializable, ITechManager {
      */
     private void checkDuplicateNamesDuringAdd(Entity entity) {
         if (duplicateNameHash.get(entity.getShortName()) == null) {
-            duplicateNameHash.put(entity.getShortName(), new Integer(1));
+            duplicateNameHash.put(entity.getShortName(), Integer.valueOf(1));
         } else {
-            int count = duplicateNameHash.get(entity.getShortName()).intValue();
+            int count = duplicateNameHash.get(entity.getShortName());
             count++;
-            duplicateNameHash.put(entity.getShortName(), new Integer(count));
+            duplicateNameHash.put(entity.getShortName(), Integer.valueOf(count));
             entity.duplicateMarker = count;
             entity.generateShortName();
             entity.generateDisplayName();
-
         }
     }
 
@@ -7009,8 +7150,8 @@ public class Campaign implements Serializable, ITechManager {
                         e.generateDisplayName();
                     }
                 }
-                duplicateNameHash.put(entity.getShortNameRaw(), new Integer(
-                        count - 1));
+                duplicateNameHash.put(entity.getShortNameRaw(), 
+                    Integer.valueOf(count - 1));
             } else {
                 duplicateNameHash.remove(entity.getShortNameRaw());
             }
@@ -7591,8 +7732,8 @@ public class Campaign implements Serializable, ITechManager {
      */
     public void reloadGameEntities() {
         game.reset();
-        for (Unit u : units) {
-            Entity en = u.getEntity();
+        for (Map.Entry<UUID, Unit> u : units.entrySet()) {
+            Entity en = u.getValue().getEntity();
             if (null != en) {
                 game.addEntity(en.getId(), en);
             }
@@ -7622,7 +7763,6 @@ public class Campaign implements Serializable, ITechManager {
                         + contract.getName());
             }
         }
-        MekHQ.triggerEvent(new MissionCompletedEvent(mission));
     }
 
     public int calculatePartTransitTime(int mos) {
@@ -7685,27 +7825,17 @@ public class Campaign implements Serializable, ITechManager {
 
     }
 
-    /*
-     * TODO: 
-     * 
-     * I think this should be rewritten to return a concrete class instead of 
-     * an array of strings.
-     * 
-     * This should have 3 ints for the values and an optional string modifier 
-     * for the points (armor) and shots (ammo).
-     * 
-     * Cord Awtry (kipstafoo) - 30-Oct-2016
-     */
     /**
-     * This returns a String array of length three, with the following values 0 - the number of parts of this type, or
-     * armor points, or ammo shots currently in stock 1 - the number of parts of this type, or armor points, or ammo shots
-     * currently in transit 2 - the number of parts of this type, or armor points, or ammo shots currently on order
+     * This returns a PartInventory object detailing the current count
+     * for a part on hand, in transit, and ordered.
      *
-     * @param part
-     * @return
+     * @param part A part to lookup its current inventory.
+     * @return A PartInventory object detailing the current counts of
+     * the part on hand, in transit, and ordered.
+     * @see mekhq.campaign.parts.PartInventory
      */
-    public String[] getPartInventory(Part part) {
-        String[] inventories = new String[3];
+    public PartInventory getPartInventory(Part part) {
+        PartInventory inventory = new PartInventory();
 
         int nSupply = 0;
         int nTransit = 0;
@@ -7742,6 +7872,9 @@ public class Campaign implements Serializable, ITechManager {
             }
         }
 
+        inventory.setSupply(nSupply);
+        inventory.setTransit(nTransit);
+
         int nOrdered = 0;
         IAcquisitionWork onOrder = getShoppingList().getShoppingItem(part);
         if (null != onOrder) {
@@ -7758,25 +7891,19 @@ public class Campaign implements Serializable, ITechManager {
             }
         }
 
-        String strSupply = Integer.toString(nSupply);
-        String strTransit = Integer.toString(nTransit);
-        String strOrdered = Integer.toString(nOrdered);
+        inventory.setOrdered(nOrdered);
 
+        String countModifier = "";
         if (part instanceof Armor || part instanceof ProtomekArmor
                 || part instanceof BaArmor) {
-            strSupply += " points";
-            strTransit += " points";
-            strOrdered += " points";
+            countModifier = "points";
         }
         if (part instanceof AmmoStorage) {
-            strSupply += " shots";
-            strTransit += " shots";
-            strOrdered += " shots";
+            countModifier = "shots";
         }
-        inventories[0] = strSupply;
-        inventories[1] = strTransit;
-        inventories[2] = strOrdered;
-        return inventories;
+        
+        inventory.setCountModifier(countModifier);
+        return inventory;
     }
 
     public long getTotalEquipmentValue() {
@@ -7869,7 +7996,7 @@ public class Campaign implements Serializable, ITechManager {
         } else if (getCampaignOptions().useEquipmentContractBase()) {
             return getForceValue(getCampaignOptions().useInfantryDontCount());
         } else {
-            return getPayRoll(getCampaignOptions().useInfantryDontCount());
+            return getTheoreticalPayroll(getCampaignOptions().useInfantryDontCount());
         }
     }
 
@@ -7910,7 +8037,8 @@ public class Campaign implements Serializable, ITechManager {
         long largeCraft = 0;
         long proto = 0;
         long spareParts = 0;
-        for (Unit u : units) {
+        for (Map.Entry<UUID, Unit> mu : units.entrySet()) {
+            Unit u = mu.getValue();
             long value = u.getSellValue();
             if (u.getEntity() instanceof Mech) {
                 mech += value;
@@ -7930,7 +8058,7 @@ public class Campaign implements Serializable, ITechManager {
             }
         }
         for (Part p : getSpareParts()) {
-            spareParts += p.getActualValue();
+            spareParts += (p.getActualValue() * p.getQuantity());
         }
 
         long monthlyIncome = 0;
@@ -7963,7 +8091,7 @@ public class Campaign implements Serializable, ITechManager {
         monthlyExpenses = maintenance + salaries + overhead + coSpareParts + coAmmo + coFuel;
 
         long assets = cash + mech + vee + ba + infantry + largeCraft
-                + smallCraft + proto + getFinances().getTotalAssetValue();
+                + smallCraft + proto + spareParts + getFinances().getTotalAssetValue();
         long liabilities = loans;
         long netWorth = assets - liabilities;
         int longest = Math.max(DecimalFormat.getInstance().format(liabilities)
@@ -8594,7 +8722,7 @@ public class Campaign implements Serializable, ITechManager {
     }
 
     public String getCombatPersonnelDetails() {
-        int[] countPersonByType = new int[Person.T_SPACE_GUNNER + 1];
+        int[] countPersonByType = new int[Person.T_NUM];
         int countTotal = 0;
         int countInjured = 0;
         int countMIA = 0;
@@ -8604,7 +8732,7 @@ public class Campaign implements Serializable, ITechManager {
 
         for (Person p : getPersonnel()) {
             // Add them to the total count
-            if (p.getPrimaryRole() <= Person.T_SPACE_GUNNER && !p.isPrisoner()
+            if (Person.isCombatRole(p.getPrimaryRole()) && !p.isPrisoner()
                     && !p.isBondsman() && p.isActive()) {
                 countPersonByType[p.getPrimaryRole()]++;
                 countTotal++;
@@ -8615,13 +8743,13 @@ public class Campaign implements Serializable, ITechManager {
                     countInjured++;
                 }
                 salary += p.getSalary();
-            } else if (p.getPrimaryRole() <= Person.T_SPACE_GUNNER
+            } else if (Person.isCombatRole(p.getPrimaryRole())
                     && p.getStatus() == Person.S_RETIRED) {
                 countRetired++;
-            } else if (p.getPrimaryRole() <= Person.T_SPACE_GUNNER
+            } else if (Person.isCombatRole(p.getPrimaryRole())
                     && p.getStatus() == Person.S_MIA) {
                 countMIA++;
-            } else if (p.getPrimaryRole() <= Person.T_SPACE_GUNNER
+            } else if (Person.isCombatRole(p.getPrimaryRole())
                     && p.getStatus() == Person.S_KIA) {
                 countKIA++;
             }
@@ -8635,10 +8763,12 @@ public class Campaign implements Serializable, ITechManager {
                 countTotal);
         sb.append(buffer);
 
-        for (int i = Person.T_NONE + 1; i <= Person.T_SPACE_GUNNER; i++) {
-            buffer = String.format("    %-30s    %4s\n", Person.getRoleDesc(i, getFaction().isClan()),
-                    countPersonByType[i]);
-            sb.append(buffer);
+        for (int i = 0; i <= Person.T_NUM; i++) {
+            if (Person.isCombatRole(i)) {
+                buffer = String.format("    %-30s    %4s\n", Person.getRoleDesc(i, getFaction().isClan()),
+                        countPersonByType[i]);
+                sb.append(buffer);
+            }
         }
 
         buffer = String.format("%-30s        %4s\n",
@@ -8672,7 +8802,7 @@ public class Campaign implements Serializable, ITechManager {
 
         for (Person p : getPersonnel()) {
             // Add them to the total count
-            if (p.getPrimaryRole() > Person.T_SPACE_GUNNER && !p.isPrisoner()
+            if (Person.isSupportRole(p.getPrimaryRole()) && !p.isPrisoner()
                     && !p.isBondsman() && p.isActive()) {
                 countPersonByType[p.getPrimaryRole()]++;
                 countTotal++;
@@ -8690,13 +8820,13 @@ public class Campaign implements Serializable, ITechManager {
                 if (p.getInjuries().size() > 0 || p.getHits() > 0) {
                     countInjured++;
                 }
-            } else if (p.getPrimaryRole() > Person.T_SPACE_GUNNER
+            } else if (Person.isSupportRole(p.getPrimaryRole())
                     && p.getStatus() == Person.S_RETIRED) {
                 countRetired++;
-            } else if (p.getPrimaryRole() > Person.T_SPACE_GUNNER
+            } else if (Person.isSupportRole(p.getPrimaryRole())
                     && p.getStatus() == Person.S_MIA) {
                 countMIA++;
-            } else if (p.getPrimaryRole() > Person.T_SPACE_GUNNER
+            } else if (Person.isSupportRole(p.getPrimaryRole())
                     && p.getStatus() == Person.S_KIA) {
                 countKIA++;
             }
@@ -8710,10 +8840,12 @@ public class Campaign implements Serializable, ITechManager {
                 countTotal);
         sb.append(buffer);
 
-        for (int i = Person.T_NAVIGATOR; i < Person.T_NUM; i++) {
-            buffer = String.format("    %-30s    %4s\n", Person.getRoleDesc(i, getFaction().isClan()),
-                    countPersonByType[i]);
-            sb.append(buffer);
+        for (int i = 0; i < Person.T_NUM; i++) {
+            if (Person.isSupportRole(i)) {
+                buffer = String.format("    %-30s    %4s\n", Person.getRoleDesc(i, getFaction().isClan()),
+                        countPersonByType[i]);
+                sb.append(buffer);
+            }
         }
 
         buffer = String.format("%-30s        %4s\n",
@@ -8748,7 +8880,7 @@ public class Campaign implements Serializable, ITechManager {
         int minutesUsed = u.getMaintenanceTime();
         int astechsUsed = getAvailableAstechs(minutesUsed, false);
         boolean maintained = null != tech
-                && tech.getMinutesLeft() > minutesUsed && !tech.isMothballing();
+                && tech.getMinutesLeft() >= minutesUsed && !tech.isMothballing();
         boolean paidMaintenance = true;
         if (maintained) {
             // use the time
@@ -8949,7 +9081,7 @@ public class Campaign implements Serializable, ITechManager {
     }
 
     public void initTimeInService() {
-        for (Person p : personnel) {
+        for (Person p : getPersonnel()) {
             Date join = null;
             for (LogEntry e : p.getPersonnelLog()) {
                 if (join == null){
@@ -8978,18 +9110,23 @@ public class Campaign implements Serializable, ITechManager {
 
     public void initAtB() {
         retirementDefectionTracker.setLastRetirementRoll(calendar);
-        for (int i = 0; i < missions.size(); i++) {
-            if (missions.get(i) instanceof Contract && !(missions.get(i) instanceof AtBContract)) {
-                missions.set(i, new AtBContract((Contract) missions.get(i), this));
-                missionIds.put(missions.get(i).getId(), missions.get(i));
+
+        /*
+         * Switch all contracts to AtBContract's
+         */
+        for (Map.Entry<Integer, Mission> me : missions.entrySet()) {
+            Mission m = me.getValue();
+            if (m instanceof Contract && !(m instanceof AtBContract)) {
+                me.setValue(new AtBContract((Contract)m, this));
             }
         }
+
         /*
          * Go through all the personnel records and assume the earliest date is the date
          * the unit was founded.
          */
         Date founding = null;
-        for (Person p : personnel) {
+        for (Person p : getPersonnel()) {
             for (LogEntry e : p.getPersonnelLog()) {
                 if (null == founding || e.getDate().before(founding)) {
                     founding = e.getDate();
@@ -9002,7 +9139,7 @@ public class Campaign implements Serializable, ITechManager {
          * that MWs assigned to a non-Assault 'Mech on the date they joined came with
          * that 'Mech (which is a less certain assumption)
          */
-        for (Person p : personnel) {
+        for (Person p : getPersonnel()) {
             Date join = null;
             for (LogEntry e : p.getPersonnelLog()) {
                 if (e.getDesc().startsWith("Joined ")) {
@@ -9032,8 +9169,8 @@ public class Campaign implements Serializable, ITechManager {
                                  */
                                 p.setOriginalUnitTech(1);
                             }
-                            if (null != p.getUnitId() && null != unitIds.get(p.getUnitId())
-                                    && ms.getName().equals(unitIds.get(p.getUnitId()).getEntity().getShortNameRaw())) {
+                            if (null != p.getUnitId() && null != units.get(p.getUnitId())
+                                    && ms.getName().equals(units.get(p.getUnitId()).getEntity().getShortNameRaw())) {
                                 p.setOriginalUnitId(p.getUnitId());
                             }
                         }
@@ -9043,8 +9180,18 @@ public class Campaign implements Serializable, ITechManager {
         }
         addAllLances(this.forces);
         atbConfig = AtBConfiguration.loadFromXml();
-        RandomFactionGenerator.getInstance().updateTables(calendar.getTime(), location.getCurrentPlanet(),
-                campaignOptions);
+        RandomFactionGenerator.getInstance().startup(this);
+        atbEventProcessor = new AtBEventProcessor(this);
+    }
+    
+    /**
+     * Stop processing AtB events and release memory.
+     */
+    public void shutdownAtB() {
+        RandomFactionGenerator.getInstance().dispose();
+        RandomUnitGenerator.getInstance().dispose();
+        RandomNameGenerator.getInstance().dispose();
+        atbEventProcessor.shutdown();
     }
 
     public boolean checkOverDueLoans() {
